Creating Picoolo projects and app

--- a/almostauto-web/src/almostauto/web/templates/fragments/templates-new.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/fragments/templates-new.html.jinja2
@@ -2,5 +2,5 @@
 <form hx-boost="true" action="/templates" method="post">
     <label for="title">Title</label>
     <input name="title" type="text" placeholder="Template title">
-    <button>Submit</button>
+    <button type="submit">Submit</button>
 </form>
