--- a/almostauto-web/src/almostauto/web/templates/fragments/templates-view.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/fragments/templates-view.html.jinja2
@@ -1,3 +1,3 @@
 <h2>{{ template.title }}</h2>
 <p>Title</p><p>{{ template.title }}</p>
-<button hx-action="/templates/{{ template.id }}/edit">Edit</button>
+<button hx-get="/templates/{{ template.id }}/edit">Edit</button>
