--- a/almostauto-web/src/almostauto/web/templates/fragments/templates-new.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/fragments/templates-new.html.jinja2
@@ -1,5 +1,5 @@
 <h2>New Template</h2>
-<form hx-boost="true" action="/templates" method="post">
+<form hx-boost="true" hx-post="/templates" hx-ext="json-enc">
     <label for="title">Title</label>
     <input name="title" type="text" placeholder="Template title">
     <button type="submit">Submit</button>
