--- a/almostauto-web/src/almostauto/web/templates/fragments/templates-view.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/fragments/templates-view.html.jinja2
@@ -1,4 +1,6 @@
+<div id="bar">
+    <button hx-get="/templates/{{ template.id }}/edit">Edit</button>
+    <button hx-delete="/templates/{{ template.id }}">Delete</button>
+</div>
 <h2>{{ template.title }}</h2>
 <p>Title</p><p>{{ template.title }}</p>
-<button hx-get="/templates/{{ template.id }}/edit">Edit</button>
-<button hx-delete"/templates/{{ template.id }}">Delete</button>
