--- a/almostauto-web/src/almostauto/web/templates/pages/templates.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/pages/templates.html.jinja2
@@ -4,12 +4,5 @@
     <div id="panel">
         <a href="/templates/new">New</a>
     </div>
-    <ul>
-    {% for template in templates %}
-        <li hx-target="this">
-            <a href="/templates/{{ template.id }}"><h3>{{ template.title }}</h3></a>
-            <button hx-delete="/templates/{{ template.id }}" hx-swap="delete">Delete</button>
-        </li>
-    {% endfor %}
-    </ul>
+    {% include "fragments/templates-list.html.jinja2" %}
 {% endblock %}
