--- a/almostauto-web/src/almostauto/web/templates/fragments/templates-list.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/fragments/templates-list.html.jinja2
@@ -1,8 +1,12 @@
-    <ul>
-    {% for template in templates %}
-        <li hx-target="this">
-            <a href="/templates/{{ template.id }}"><h3>{{ template.title }}</h3></a>
-            <button hx-delete="/templates/{{ template.id }}" hx-swap="delete">Delete</button>
-        </li>
-    {% endfor %}
-    </ul>
+<h2>Templates</h2>
+<div id="panel">
+    <a href="/templates/new">New</a>
+</div>
+<ul>
+{% for template in templates %}
+    <li hx-target="this">
+        <a href="/templates/{{ template.id }}"><h3>{{ template.title }}</h3></a>
+        <button hx-delete="/templates?template_id={{ template.id }}" hx-swap="delete">Delete</button>
+    </li>
+{% endfor %}
+</ul>
