--- a/almostauto-web/src/almostauto/web/templates/base.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/base.html.jinja2
@@ -7,6 +7,12 @@
 </head>
 <body>
     <div id="header"><h1>Almost Automated</h1></div>
+    <div id="sidebar">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/templates">Templates</a></li>
+        </ul>
+    </div>
     <div id="content">{% block content %}{% endblock %}</div>
     <div id="footer">
         {% block footer %}
