--- a/almostauto-web/src/almostauto/web/templates/pages/templates.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/pages/templates.html.jinja2
@@ -1,4 +1,17 @@
 {% extends "base.html.jinja2" %}
 {% block content %}
-    {% include "fragments/templates-list.html.jinja2" %}
+<h2>Templates</h2>
+<div id="panel">
+    <a href="/templates/new">New</a>
+</div>
+{% block list %}
+<ul>
+{% for template in templates %}
+    <li hx-target="this">
+        <a href="/templates/{{ template.id }}"><h3>{{ template.title }}</h3></a>
+        <button hx-delete="/templates/list/{{ template.id }}" hx-swap="delete">Delete</button>
+    </li>
+{% endfor %}
+</ul>
+{% endblock %}
 {% endblock %}
