--- a/almostauto-web/src/almostauto/web/templates/base.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/base.html.jinja2
@@ -13,7 +13,7 @@
             <li><a href="/templates">Templates</a></li>
         </ul>
     </div>
-    <div id="content">{% block content %}{% endblock %}</div>
+    <div id="content" hx-target="this" hx-swap="innerHTML">{% block content %}{% endblock %}</div>
     <div id="footer">
         {% block footer %}
         {% endblock %}
