Added initial routes and template

--- a/almostauto-web/src/almostauto/web/templates/pages/templates-id.html.jinja2
+++ b/almostauto-web/src/almostauto/web/templates/pages/templates-id.html.jinja2
@@ -10,9 +10,18 @@
     <p>Title</p><p>{{ template.title }}</p>
 {% endblock %}
 </div>
-<div id="steps">
+<div id="steps" hx-target="this" hx-get="/templates/{{ template.id }}/steps" hx-trigger="load">
+{% block template_steps %}
     {% for step in steps %}
-    
+    <div id="template-step-{{ step.id }}" hx-target="this">
+        <h3>{{ step.title }}</h3>
+        <button>Edit</button>
+        <button>Delete</button>
+    </div>
     {% endfor %}
+    <div hx-target="this">
+        <button hx-get="/templates/{{ template.id }}/steps/new">Create</button>
+    </div>
+{% endblock %}
 </div>
 {% endblock %}
