--- a/almostauto-web/src/almostauto/web/components/template_steps/NewTemplateStepForm.jinja
+++ b/almostauto-web/src/almostauto/web/components/template_steps/NewTemplateStepForm.jinja
@@ -1,4 +1,6 @@
-<form hx-post="/templates/{{ template.id }}/steps/new" hx-ext="json-enc">
+{#def template_id #}
+
+<form hx-post="/templates/{{ template_id }}/steps" hx-ext="json-enc">
     <label for="title">Title</label>
     <input name="title" type="text" placeholder="Step title">
     <button type="submit">Submit</button>
