--- a/almostauto-web/src/almostauto/web/components/template_steps/TemplateStepsList.jinja
+++ b/almostauto-web/src/almostauto/web/components/template_steps/TemplateStepsList.jinja
@@ -3,7 +3,7 @@
 {% for step in steps %}
 <details id="template-steps-{{ step.number }}">
     <summary>{{ step.title }}</summary>
-    <button hx-get="/templates/{{ template_id }}/steps/{{ step.number }}">Edit</button>
+    <button hx-get="/templates/{{ template_id }}/steps/{{ step.number }}/edit" hx-target="#template-steps-{{ step.number }}">Edit</button>
     <button hx-delete="/templates/{{ template_id }}/steps/{{ step.number }}">Delete</button>
 </details>
 {% endfor %}
