Fixed editing and creating template steps

--- a/almostauto-web/src/almostauto/web/components/ViewTemplatePage.jinja
+++ b/almostauto-web/src/almostauto/web/components/ViewTemplatePage.jinja
@@ -7,7 +7,7 @@
     <div id="template" hx-target="this">
         <templates.ViewTemplate template={{ template }} />
     </div>
-    <div id="steps" hx-target="this">
+    <div id="steps">
         <template_steps.TemplateStepsList template_id={{ template.id }} steps={{ steps }} />
     </div>
 </Base>
