--- a/almostauto-web/src/almostauto/web/components/template_steps/CreateStepButton.jinja
+++ b/almostauto-web/src/almostauto/web/components/template_steps/CreateStepButton.jinja
@@ -1,3 +1,3 @@
 {#def template_id #}
 
-<button hx-get="/templates/{{ template_id }}/steps/new">Create</button>
+<button hx-get="/templates/{{ template_id }}/steps/new" hx-target="this" hx-swap="outerHTML">Create</button>
