--- a/almostauto-web/src/almostauto/web/components/template_steps/NewTemplateStepForm.jinja
+++ b/almostauto-web/src/almostauto/web/components/template_steps/NewTemplateStepForm.jinja
@@ -1,6 +1,6 @@
 {#def template_id #}
 
-<form hx-post="/templates/{{ template_id }}/steps" hx-ext="json-enc">
+<form hx-post="/templates/{{ template_id }}/steps" hx-target="this" hx-swap="outerHTML" hx-ext="json-enc">
     <label for="title">Title</label>
     <input name="title" type="text" placeholder="Step title">
     <button type="submit">Submit</button>
