--- a/almostauto-web/src/almostauto/web/components/template_steps/TemplateStepsList.jinja
+++ b/almostauto-web/src/almostauto/web/components/template_steps/TemplateStepsList.jinja
@@ -1,12 +1,6 @@
 {#def template_id, steps #}
 
 {% for step in steps %}
-<details id="template-steps-{{ step.number }}">
-    <summary>{{ step.title }}</summary>
-    <button hx-get="/templates/{{ template_id }}/steps/{{ step.number }}/edit" hx-target="#template-steps-{{ step.number }}">Edit</button>
-    <button hx-delete="/templates/{{ template_id }}/steps/{{ step.number }}">Delete</button>
-</details>
+<template_steps.TemplateStep template_id={{ template_id }} step={{ step }} />
 {% endfor %}
-<div hx-target="this" hx-swap="innerHTML">
-    <template_steps.CreateStepButton template_id={{ template_id }} />
-</div>
+<template_steps.CreateStepButton template_id={{ template_id }} />
