--- a/almostauto-web/src/almostauto/web/components/templates/ViewTemplateAndSteps.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/ViewTemplateAndSteps.jinja
@@ -4,6 +4,6 @@
 <div id="template">
     <templates.ViewTemplate template={{ template }} />
 </div>
-<div id="steps" hx-target="this">
+<div id="steps">
     <templates.TemplateStepsList template={{ template }} steps={{ steps }} />
 </div>
