--- a/almostauto-web/src/almostauto/web/components/ViewTemplatePage.jinja
+++ b/almostauto-web/src/almostauto/web/components/ViewTemplatePage.jinja
@@ -1,13 +1,5 @@
 {#def template, steps #}
 
 <Base>
-    <div id="controls">
-        <templates.ViewTemplateControls template={{ template }} />
-    </div>
-    <div id="template" hx-target="this">
-        <templates.ViewTemplate template={{ template }} />
-    </div>
-    <div id="steps">
-        <template_steps.TemplateStepsList template_id={{ template.id }} steps={{ steps }} />
-    </div>
+    <templates.ViewTemplateContent template={{ template }} steps={{ steps }} />
 </Base>
