Added runbook controls

--- a/almostauto-web/src/almostauto/web/components/runbooks/RunbookId.jinja
+++ b/almostauto-web/src/almostauto/web/components/runbooks/RunbookId.jinja
@@ -1,5 +1,7 @@
 {#def runbook #}
 
+<runbooks.ControlPanel runbook_id={{ runbook.id }} status={{ runbook.result }} />
+
 <h3>{{ runbook.title }}</h3>
 <p>Status: {{ runbook.result }}</p>
 <p>Created: {{ runbook.created }}</p>
