Runbook step status implemented

--- a/almostauto-web/src/almostauto/web/components/RunbookIdPage.jinja
+++ b/almostauto-web/src/almostauto/web/components/RunbookIdPage.jinja
@@ -1,5 +1,5 @@
-{#def runbook #}
+{#def runbook, steps #}
 
 <Base>
-    <runbooks.RunbookId runbook={{ runbook }} />
+    <runbooks.RunbookId runbook={{ runbook }} steps={{ steps }} />
 </Base>
