--- a/almostauto-web/src/almostauto/web/components/runbook_steps/Step.jinja
+++ b/almostauto-web/src/almostauto/web/components/runbook_steps/Step.jinja
@@ -1,9 +1,7 @@
 {#def runbook_id, step #}
 
-<li>
-    Number: {{ step.number }}
-    Title: {{ step.title }}
-    <runbook_steps.ResultControl runbook_id={{ runbook_id }} step={{ step }} />
-    Result: {{ step.result }}
+<details>
+    <summary>{{ step.title }}
+    <runbook_steps.ResultControl runbook_id={{ runbook_id }} step={{ step }} /></summary>
     <button hx-get="/runbooks/{{ runbook_id }}/steps/{{ step.number }}/edit">Edit</button>
-</li>
+</details>
