--- a/almostauto-web/src/almostauto/web/components/Base.jinja
+++ b/almostauto-web/src/almostauto/web/components/Base.jinja
@@ -10,10 +10,13 @@
     <div id="sidebar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/templates" hx-get="/templates" hx-target="#content">Templates</a></li>
+            <li>
+                <a href="/runbooks" hx-get="/runbooks" hx-target="#content">Runbooks</a>
+                <ul><li><a href="/templates" hx-get="/templates" hx-target="#content">Templates</a></li></ul>
+            </li>
         </ul>
     </div>
-    <div id="content" hx-target="this" hx-swap="innerHTML">{{ content }}</div>
+    <div id="content" hx-target="this">{{ content }}</div>
     <div id="footer">
         {% block footer %}
         {% endblock %}
