--- a/almostauto-web/src/almostauto/web/components/templates/TemplatesList.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/TemplatesList.jinja
@@ -1,10 +1,18 @@
 {#def templates #}
 
-<ul>
-{% for template in templates %}
-    <li hx-target="this">
-        <a href="/templates/{{ template.id }}"><h3>{{ template.title }}</h3></a>
-        <button hx-delete="/templates/list/{{ template.id }}" hx-swap="delete">Delete</button>
-    </li>
-{% endfor %}
-</ul>
+<div class="grid grid-cols-4 gap-4 p-4">
+    {% for template in templates %}
+    <div class="border border-solid border-black rounded p-2" hx-target="this">
+        <a href="/templates/{{ template.id }}">
+            <h3>{{ template.title }}</h3>
+        </a>
+        <a href="/templates/{{ template.id }}/edit"
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 my-2">
+            Edit
+        </a>
+        <button
+            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 my-2"
+            hx-delete="/templates/list/{{ template.id }}" hx-swap="delete">Delete</button>
+    </div>
+    {% endfor %}
+</div>
