Styled template view controls

--- a/almostauto-web/src/almostauto/web/components/templates/ViewTemplateContent.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/ViewTemplateContent.jinja
@@ -1,6 +1,6 @@
 {#def template, steps #}
 
-<div id="controls">
+<div class="flex flex-row m-4 p-2 max-dvw border border-solid border-black rounded">
     <templates.ViewTemplateControls template={{ template }} />
 </div>
 <div id="template" hx-target="this">
