--- a/almostauto-web/src/almostauto/web/components/TemplatesListPage.jinja
+++ b/almostauto-web/src/almostauto/web/components/TemplatesListPage.jinja
@@ -1,10 +1,5 @@
 {#def templates #}
 
 <Base>
-    <div class="flex flex-row m-4 p-2 max-dvw border border-solid border-black rounded">
-        <h2 class="p-2 text-xl">Templates</h2>
-        <a href="/templates/new" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 my-2">New</a>
-    </div>
-
-    <templates.TemplatesList templates={{ templates }} />
+    <templates.TemplatesContent templates={{ templates }} />
 </Base>
