--- a/almostauto-web/src/almostauto/web/components/templates/TemplatesContent.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/TemplatesContent.jinja
@@ -1,8 +1,4 @@
 {#def templates #}
 
-<h2>Templates</h2>
-<div id="panel">
-    <a href="/templates/new">New</a>
-</div>
-
+<templates.TemplatesListControls />
 <templates.TemplatesList templates={{ templates }} />
